--- a/src/app/pages/forms/add-user/add-user.component.html
+++ b/src/app/pages/forms/add-user/add-user.component.html
@@ -4,6 +4,14 @@
       <nb-card>
         <nb-card-header>CREATE A NEW USER ACCOUNT</nb-card-header>
         <nb-card-body>
+          <div class="row">
+            <div style="margin: 0 auto;">
+              <img *ngIf="createAccountButtonClicked" src="../../../assets/loaders/loading-green.gif">
+            </div>
+          </div>
+          <div class="row">
+            <small class="form-text sub-title help" *ngIf="accountFailed">{{ accountErrorMessage }}</small>
+          </div>
           <form (ngSubmit)="onAddUser()" (ngReset)="onReset()" #form="ngForm">
             <div class="row">
               <div class="form-group col-sm-6 clear-bottom">
@@ -19,17 +27,19 @@
             </div>
             <div class="row">
               <div class="form-group col-sm-6 clear-bottom">
-                <angular2-multiselect class="form-control" [data]="gender" [(ngModel)]="selectedGender"
-                [settings]="dropdownSettings"
-                (onSelect)="onItemSelect($event)"
-                (onDeSelect)="OnItemDeSelect($event)"
-                (onSelectAll)="onSelectAll($event)"
-                (onDeSelectAll)="onDeSelectAll($event)" id="user_gender" name="user_gender" required ngModel
-                #user_gender="ngModel"></angular2-multiselect>
+                <angular2-multiselect class="form-control" (onOpen)= "fetchGender()" [data]="gender" [(ngModel)]="selectedGender"
+                                      [settings]="dropdownSettings"
+                                      (onSelect)="onItemSelect($event)"
+                                      (onDeSelect)="OnItemDeSelect($event)"
+                                      (onSelectAll)="onSelectAll($event)"
+                                      (onDeSelectAll)="onDeSelectAll($event)" id="user_gender" name="user_gender"
+                                      required ngModel
+                                      #user_gender="ngModel"></angular2-multiselect>
                 <span class="help-block" *ngIf="!user_gender.valid && user_gender.touched">Please select a gender</span>
               </div>
               <div class="form-group col-sm-6 clear-bottom">
-                <input type="text" placeholder="Phone Number" id="phone" class="form-control" name="phone" ngModel required
+                <input type="text" placeholder="Phone Number" id="phone" class="form-control" name="phone" ngModel
+                       required
                        #phone="ngModel"/>
                 <span class="help-block" *ngIf="!phone.valid && phone.touched">Please provide phone number</span>
               </div>
@@ -48,17 +58,6 @@
                 <span class="help-block" *ngIf="!username.valid && username.touched">Please provide username</span>
               </div>
             </div>
-            <!--<div class="row">-->
-              <!--<div class="form-group col-sm-6 clear-bottom">-->
-                <!--&lt;!&ndash;<angular2-multiselect class="form-control" [data]="roles" [(ngModel)]="selectedRoles"&ndash;&gt;-->
-                <!--&lt;!&ndash;[settings]="dropdownSettings"&ndash;&gt;-->
-                <!--&lt;!&ndash;(onSelect)="onItemSelect($event)"&ndash;&gt;-->
-                <!--&lt;!&ndash;(onDeSelect)="OnItemDeSelect($event)"&ndash;&gt;-->
-                <!--&lt;!&ndash;(onSelectAll)="onSelectAll($event)"&ndash;&gt;-->
-                <!--&lt;!&ndash;(onDeSelectAll)="onDeSelectAll($event)" name="role" required ngModel&ndash;&gt;-->
-                <!--&lt;!&ndash;#role="ngModel"></angular2-multiselect>&ndash;&gt;-->
-              <!--</div>-->
-            <!--</div>-->
             <div class="row">
               <div class="form-group col-sm-6 clear-bottom">
                 <input type="password" placeholder="Password" class="form-control" name="password" id="password" ngModel
@@ -73,8 +72,24 @@
               </div>
             </div>
             <div class="row">
+              <div class="form-group col-sm-12 clear-bottom">
+                <angular2-multiselect class="form-control" (onOpen)="fetchRoles()" [data]="roles" [(ngModel)]="selectedRoles"
+                                      [settings]="roleDropdownSettings"
+                                      name="role"
+                                      (onSelect)="onItemSelect($event)"
+                                      (onDeSelect)="OnItemDeSelect($event)"
+                                      (onSelectAll)="onSelectAll($event)"
+                                      (onDeSelectAll)="onDeSelectAll($event)"
+                                      required
+                                      ngModel
+                                      id="role"
+                                      #role="ngModel"></angular2-multiselect>
+              </div>
+            </div>
+            <div class="row" style="margin-top: 50px;">
               <div class="col-sm-6 form-group">
-                <input type="submit" class="form-control btn btn-hero-success" [disabled] = "!form.valid && passwordsDoNotMatch" value="Create"/>
+                <input type="submit" class="form-control btn btn-hero-success"
+                       [disabled]="(!form.valid && !roles_selected) || passwordsDoNotMatch " value="Create"/>
               </div>
               <div class="col-sm-6 form-group">
                 <input type="reset" class="form-control btn btn-hero-danger" value="Clear"/>
