--- a/src/app/pages/forms/manage-cars/page-switcher/select-user/select-user.component.html
+++ b/src/app/pages/forms/manage-cars/page-switcher/select-user/select-user.component.html
@@ -1,8 +1,28 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8">
+      <div class="col-sm-8" style="height: 100px;">
+        <angular2-multiselect class="form-control" (onOpen)="onGetRoles()" [data]="roles"
+                              [(ngModel)]="selectedRoles"
+                              [settings]="roleDropdownSettings"
+                              name="role"
+                              (onSelect)="onItemSelect($event)"
+                              (onDeSelect)="OnItemDeSelect($event)"
+                              (onSelectAll)="onSelectAll($event)"
+                              (onDeSelectAll)="onDeSelectAll($event)"
+                              required
+                              ngModel
+                              id="role"
+                              #role="ngModel"></angular2-multiselect>
+      </div>
+    </div>
+  </div>
+  <div class="row" *ngIf="usersAvailable">
+    <div class="col-lg-8">
       <nb-card>
-        <nb-card-header>SELECT USER FOR WHOM TO ADD THE CAR INFORMATION</nb-card-header>
+        <nb-card-header>
+          SELECT USER FOR WHOM TO ADD THE CAR INFORMATION
+        </nb-card-header>
         <nb-card-body>
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search for user...">
@@ -22,12 +42,12 @@
                 <th style="text-align: center; font-size: 16px;">Email</th>
                 <th style="text-align: center; font-size: 16px;">Action</th>
               </tr>
-              <tr *ngFor="let user of users; let i = index">
+              <tr *ngFor="let user of employees; let i = index">
                 <td style="text-align: center;">
                   <label class="form-control">{{ i + 1 }}</label>
                 </td>
                 <td>
-                  <label class="form-control">{{ user.firstname + ' ' + user.lastname }}</label>
+                  <label class="form-control">{{ user.username}}</label>
                 </td>
                 <td style="text-align: center;">
                   <label class="form-control">{{ user.phone }}</label>
@@ -36,7 +56,7 @@
                   <label class="form-control">{{ user.email }}</label>
                 </td>
                 <td>
-                  <input type="button" class="form-control btn btn-hero-info" routerLink="/pages/forms/manage-cars/page-switcher/add-car" value="Enter Car Info" (click)="goToAddCar(user.id)"/>
+                  <input type="button" class="form-control btn btn-hero-info" routerLink="/pages/forms/manage-cars/page-switcher/add-car" value="Enter Car Info" (click)="goToAddCar(user.id, index)"/>
                 </td>
               </tr>
             </table>
