--- a/src/app/pages/forms/manage-cars/add-model/add-model.component.scss
+++ b/src/app/pages/forms/manage-cars/add-model/add-model.component.scss
@@ -1,3 +1,7 @@
 .clear-bottom {
   margin-bottom: 20px;
 }
+
+input.ng-invalid.ng-touched, select.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
